# Micro_LLMs

./: .gitignore  README.md  VOICE_FEATURES.md  analysis_options.yaml  ideal_tictactoe_response.txt  pubspec.yaml  screening_answer.md  setup.sh
.cursor/plans/: v2_cloud-first_app_84dff4e1.plan.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/microllm/app/: AudioRecorderHandler.kt  DeviceScannerHandler.kt  LlamaHandler.kt  LlamaNative.kt  MainActivity.kt  MemoryHandler.kt  SpeechToTextHandler.kt  TextToSpeechHandler.kt  WhisperHandler.kt  WhisperNative.kt
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/xml/: network_security_config.xml
assets/prompts/: system_prompt.txt
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/di/: injection.dart
lib/core/error/: exceptions.dart  failures.dart
lib/core/utils/: logger.dart  result.dart
lib/data/datasources/: audio_recorder_service.dart  benchmark_storage.dart  conversation_storage.dart  device_scanner_datasource.dart  llm_conversation_sync_datasource.dart  llm_jni_datasource.dart  llm_native_datasource.dart  model_download_datasource.dart  settings_datasource.dart  system_prompt_storage_impl.dart  v2_session_storage.dart  voice_datasource.dart  whisper_datasource.dart
lib/data/repositories/: cloud_llm_repository_impl.dart  llm_repository_impl.dart  model_repository_impl.dart  settings_repository_impl.dart  voice_repository_impl.dart
lib/data/services/: cloud_api_key_storage.dart  cloud_connectivity_checker.dart  deepgram_streaming_service.dart  elevenlabs_tts_service.dart  gemini_api_service.dart  groq_api_service.dart  model_download_service.dart  stt_model_download_service.dart  stt_model_path_resolver_impl.dart
lib/domain/entities/: app_settings.dart  benchmark_prompt.dart  benchmark_result.dart  cloud_provider.dart  conversation.dart  device_specs.dart  evaluation_result.dart  inference_request.dart  message.dart  model_info.dart  safety_result.dart  speech_to_text_engine.dart  text_to_speech_engine.dart  v2_session_record.dart
lib/domain/repositories/: llm_repository.dart  model_repository.dart  settings_repository.dart  voice_repository.dart
lib/domain/services/: compatibility_calculator.dart  device_benchmark.dart  model_catalog.dart  prompt_security_layer.dart  stt_model_catalog.dart  stt_model_path_resolver.dart  system_prompt_manager.dart
lib/domain/usecases/: download_model_usecase.dart  evaluation_usecase.dart  generate_response_usecase.dart  load_model_usecase.dart  safety_preprocessor_usecase.dart  speech_to_text_usecase.dart  summarize_transcript_usecase.dart  text_to_speech_usecase.dart  translate_text_usecase.dart  usecase.dart
lib/native/: llama_bindings.dart
lib/presentation/blocs/benchmark/: benchmark_bloc.dart  benchmark_event.dart  benchmark_state.dart
lib/presentation/blocs/chat/: chat_bloc.dart  chat_event.dart  chat_state.dart
lib/presentation/blocs/device/: device_bloc.dart  device_event.dart  device_state.dart
lib/presentation/blocs/model/: model_bloc.dart  model_event.dart  model_state.dart
lib/presentation/blocs/settings/: settings_bloc.dart  settings_event.dart  settings_state.dart
lib/presentation/blocs/v2_session/: v2_session_bloc.dart  v2_session_event.dart  v2_session_state.dart
lib/presentation/blocs/voice/: voice_bloc.dart  voice_event.dart  voice_state.dart
lib/presentation/pages/: api_setup_page.dart  benchmark_page.dart  chat_history_page.dart  chat_page.dart  device_compatibility_page.dart  onboarding_page.dart  prompt_editor_page.dart  settings_page.dart  system_prompts_page.dart  v2_history_page.dart  v2_home_page.dart
lib/presentation/theme/: app_theme.dart  ui_tokens.dart
lib/presentation/widgets/: benchmark_dialog.dart  chat_input.dart  chat_message_bubble.dart  device_specs_card.dart  model_compatibility_card.dart  model_status_banner.dart  voice_button.dart
lib/presentation/widgets/motion/: fade_slide.dart
test/: widget_test.dart
test/integration/: model_download_test.dart
test/stress/: memory_stress_test.dart
test/unit/data/services/: model_download_service_test.dart
test/unit/domain/entities/: device_specs_test.dart
test/unit/domain/services/: compatibility_calculator_test.dart  model_catalog_test.dart
test/unit/domain/usecases/: translate_text_usecase_test.dart
test/unit/presentation/blocs/: chat_bloc_test.dart
